Fixes #564. Hopefully all cases of inlegible text are now gone.

--- a/src/main/resources/view/Equipment.css
+++ b/src/main/resources/view/Equipment.css
@@ -191,4 +191,5 @@
 .equipped {
 	-fx-base: derive(-eq-item, -30%);
 	-fx-background: derive(-eq-item, -30%);
+	lsml-base-colour: derive(-eq-item, -30%);
 }
